--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,8 @@
     "react-native-blurhash": "^1.1.10",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "react-native-safe-area-context": "4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
