--- a/app/app.json
+++ b/app/app.json
@@ -18,16 +18,23 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.kissmarryavoid.app"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#263238"
-      }
+      },
+      "package": "com.kissmarryavoid.app"
     },
     "web": {
       "favicon": "./assets/icon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "889576e0-1fb3-48c7-b5fe-06c442ed2e22"
+      }
     }
   }
 }
