--- a/app/package.json
+++ b/app/package.json
@@ -17,10 +17,10 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-blurhash": "^1.1.10",
+    "react-native-safe-area-context": "4.4.1",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.1",
-    "react-native-safe-area-context": "4.4.1"
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
