--- a/app/eas.json
+++ b/app/eas.json
@@ -1,28 +1,21 @@
 {
-  "cli": {
-    "version": ">= 3.6.0"
-  },
   "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal",
-      "ios": {
-        "resourceClass": "m1-medium"
-      }
-    },
     "preview": {
-      "distribution": "internal",
-      "ios": {
-        "resourceClass": "m1-medium"
+      "android": {
+        "buildType": "apk",
+        "developmentClient": true,
+        "gradleCommand": ":app:assembleRelease"
       }
     },
-    "production": {
-      "ios": {
-        "resourceClass": "m1-medium"
+    "preview2": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease"
       }
-    }
-  },
-  "submit": {
-    "production": {}
+    },
+    "preview3": {
+      "developmentClient": true
+    },
+    "production": {},
+    "release": {}
   }
 }
