--- a/app/package.json
+++ b/app/package.json
@@ -1,22 +1,35 @@
 {
   "name": "app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "apk": "eas build --platform android --profile preview",
+    "apkrun": "eas build:run --platform android",
+    "build-local": "eas build --platform android --local --profile preview",
+    "build-remote": "eas build -p android --profile preview"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "@reduxjs/toolkit": "^1.9.2",
-    "expo": "~47.0.9",
+    "expo": "~47.0.12",
+    "expo-constants": "~14.0.2",
+    "expo-dev-client": "~2.0.1",
+    "expo-image": "^1.0.0",
+    "expo-modules-core": "~1.0.4 || ~1.1.1",
+    "expo-splash-screen": "~0.17.5",
+    "expo-status-bar": "~1.4.2",
+    "expo-system-ui": "~2.0.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1"
