--- a/app/package.json
+++ b/app/package.json
@@ -2,14 +2,15 @@
   "name": "app",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --dev-client",
-    "start2": "expo start",
+    "start-apk": "expo start --dev-client",
+    "start-go": "expo start",
     "apk": "eas build --platform android --profile preview",
     "apkrun": "eas build:run --platform android",
     "build-local": "npx expo run:android",
     "build-remote": "eas build -p android --profile preview"
   },
   "dependencies": {
+    "json5": ">=1.0.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "@reduxjs/toolkit": "^1.9.2",
