--- a/app/app.json
+++ b/app/app.json
@@ -9,7 +9,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#000000"
+      "backgroundColor": "#1C1B1F"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
