--- a/app/package.json
+++ b/app/package.json
@@ -11,25 +11,24 @@
     "build-remote": "eas build -p android --profile preview"
   },
   "dependencies": {
-    "json5": ">=1.0.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "@reduxjs/toolkit": "^1.9.2",
-    "expo": "~47.0.12",
-    "expo-constants": "~14.0.2",
-    "expo-dev-client": "~2.0.1",
+    "expo": "^48.0.8",
+    "expo-constants": "~14.2.1",
+    "expo-dev-client": "~2.1.5",
     "expo-image": "^1.0.0",
-    "expo-modules-core": "~1.0.4 || ~1.1.1",
-    "expo-splash-screen": "~0.17.5",
+    "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.2",
-    "expo-system-ui": "~2.0.1",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-gesture-handler": "~2.8.0",
-    "react-native-reanimated": "~2.12.0",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
+    "expo-system-ui": "~2.2.1",
+    "json5": ">=1.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1"
