--- a/app/package.json
+++ b/app/package.json
@@ -2,8 +2,8 @@
   "name": "app",
   "version": "1.0.0",
   "scripts": {
-    "start-apk": "expo start --dev-client",
-    "start-go": "expo start",
+    "start-apk": "npx expo start --dev-client",
+    "start-go": "npx expo start",
     "start-local": "npx expo-doctor || expo start --localhost --android",
     "apk": "eas build --platform android --profile preview",
     "apkrun": "eas build:run --platform android",
@@ -32,7 +32,8 @@
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "expo-asset": "~8.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
