--- a/app/package.json
+++ b/app/package.json
@@ -2,20 +2,22 @@
   "name": "app",
   "version": "1.0.0",
   "scripts": {
-    "start-apk": "npx expo start --dev-client",
-    "start-go": "npx expo start",
+    "start-apk": "npx expo start -c --dev-client",
+    "start-go": "npx expo start -c",
     "start-local": "npx expo-doctor || expo start --localhost --android",
     "apk": "eas build --platform android --profile preview",
     "apkrun": "eas build:run --platform android",
-    "build-local": "npx expo run:android",
-    "build-remote": "eas build -p android --profile preview",
-    "check": "npx expo-doctor"
+    "build-aab": "eas build --platform android || espeak 'Build Android Production Finished'",
+    "build-remote": "eas build -p android --profile preview || espeak 'Build Android Development Finished'",
+    "build-all": "eas build --platform all || espeak 'Build All Platforms Finished'",
+    "check": "npx expo-doctor || espeak 'Health Check Finished'"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "@reduxjs/toolkit": "^1.9.2",
     "expo": "^48.0.8",
+    "expo-asset": "~8.9.1",
     "expo-constants": "~14.2.1",
     "expo-dev-client": "~2.1.5",
     "expo-image": "~1.0.0",
@@ -32,8 +34,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.1",
-    "expo-asset": "~8.9.1"
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
