user image view added

--- a/app/app.json
+++ b/app/app.json
@@ -35,6 +35,16 @@
         "projectId": "889576e0-1fb3-48c7-b5fe-06c442ed2e22"
       }
     },
-    "jsEngine": "hermes"
+    "jsEngine": "hermes",
+    "plugins": [
+      [
+        "expo-media-library",
+        {
+          "photosPermission": "Allow $(PRODUCT_NAME) to access your photos.",
+          "savePhotosPermission": "Allow $(PRODUCT_NAME) to save photos.",
+          "isAccessMediaLocationEnabled": true
+        }
+      ]
+    ]
   }
 }
