--- a/app/package.json
+++ b/app/package.json
@@ -16,11 +16,13 @@
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "@reduxjs/toolkit": "^1.9.2",
-    "expo": "^48.0.8",
+    "expo": "^48.0.9",
     "expo-asset": "~8.9.1",
+    "expo-camera": "~13.2.1",
     "expo-constants": "~14.2.1",
     "expo-dev-client": "~2.1.5",
     "expo-image": "~1.0.0",
+    "expo-media-library": "~15.2.3",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.2",
     "expo-system-ui": "~2.2.1",
