--- a/app/package.json
+++ b/app/package.json
@@ -4,13 +4,16 @@
   "scripts": {
     "start-apk": "npx expo start -c --dev-client",
     "start-go": "npx expo start -c",
-    "start-local": "npx expo-doctor || expo start --localhost --android",
+    "start-local": "npx expo-doctor ; expo start --localhost --android",
     "apk": "eas build --platform android --profile preview",
     "apkrun": "eas build:run --platform android",
-    "build-aab": "eas build --platform android || espeak 'Build Android Production Finished'",
-    "build-remote": "eas build -p android --profile preview || espeak 'Build Android Development Finished'",
-    "build-all": "eas build --platform all || espeak 'Build All Platforms Finished'",
-    "check": "npx expo-doctor || espeak 'Health Check Finished'"
+    "build-aab": "eas build --platform android ; espeak 'Build Android Production Finished'",
+    "build-remote": "eas build -p android --profile preview ; espeak 'Build Android Development Finished'",
+    "build-all": "eas build --platform all ; espeak 'Build All Platforms Finished'",
+    "build-local": "npx expo run:android",
+    "check": "npx expo-doctor ; espeak 'Health Check Finished'",
+    "log": "noglob adb logcat browser:V *:I",
+    "test": "adb install -r apk/apk.apk"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.1",
@@ -21,7 +24,9 @@
     "expo-camera": "~13.2.1",
     "expo-constants": "~14.2.1",
     "expo-dev-client": "~2.1.5",
+    "expo-file-system": "~15.2.2",
     "expo-image": "~1.0.0",
+    "expo-image-manipulator": "~11.1.1",
     "expo-media-library": "~15.2.3",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.2",
@@ -29,14 +34,15 @@
     "json5": ">=1.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.4",
+    "react-native": "0.71.6",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "expo-face-detector": "~12.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
